<resources>
    <string name="app_name">AIScanner</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="content_description_google_translate_attribution">Google Translate attribution</string>
    <string name="overlay_help">Center text in box</string>
    <string name="downloading_model_files">Downloading model files…</string>
    <string name="error_not_supported_language">A non-English language was
      detected, therefore no replies were generated.</string>
    <string name="error_no_reply">Success! But no appropriate replies were generated.</string>
    <string name="error_not_supported_language2">A non-English language was
      detected, therefore no replies were generated.</string>
    <string name="error_no_reply2">Success! But no appropriate replies were generated.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="input_text">Input text</string>
    <string name="current_model">Current model: %s</string>
    <string name="current_locale">Current locale: %s</string>
    <string name="input">Enter your input</string>
    <string name="entity_extraction_trigger_btn">Trigger Entity Extraction</string>
    <string name="empty_input">Please enter a text.</string>
    <string name="entity_extraction_error">Annotation failed.</string>
    <string name="wait_message">Working…\nMake sure network is on for the first time to download model</string>
    <string name="money_entity_info">Money entity detected: %1$s.
    \nCurrency: %2$s, integer: %3$d, decimal: %4$d.\n</string>
    <string name="flight_number_entity_info">Flight number entity detected: %1$s.
    \nAirline code: %2$s, flight number: %3$s.\n</string>
    <string name="iban_entity_info">Iban entity detected: %1$s.
    \nIban country code: %2$s, iban: %3$s.\n</string>
    <string name="isbn_entity_info">Isbn entity detected: %1$s.\nIsbn:  %2$s.\n</string>
    <string name="payment_card_entity_info">Payment card entity detected: %1$s.\n
    Payment card network: %2$d, payment card number: %3$s.\n</string>
    <string name="tracking_number_entity_info">Tracking number entity detected: %1$s.\n
    Parcel carrier: %2$d, tracking number: %3$s.\n</string>
    <string name="date_time_entity_info">Date_time entity detected: %1$s.
    \n%2$s (granularity: %3$s).\n</string>
    <string name="address_entity_info">Address entity detected: %1$s.\n</string>
    <string name="phone_entity_info">Phone number entity detected: %1$s.\n</string>
    <string name="phone_entity_info_formatted">Phone number entity detected: %1$s (formatted by libphonenumber: %2$s).\n</string>
    <string name="no_entity_detected">There are no entities detected.\n</string>
    <string name="url_entity_info">URL entity detected: %1$s.\n</string>
    <string name="email_entity_info">Email entity detected: %1$s.\n</string>
    <string name="unknown_entity_info">Unknown entity detected: %1$s.\n</string>
    <string name="entities_detected">Entities detected:</string>
    <string name="granularity_unknown">Unknown</string>
    <string name="granularity_year">Year</string>
    <string name="granularity_month">Month</string>
    <string name="granularity_week">Week</string>
    <string name="granularity_day">Day</string>
    <string name="granularity_hour">Hour</string>
    <string name="granularity_minute">Minute</string>
    <string name="granularity_second">Second</string>
    <string name="choose_model_btn">Choose a model</string>
    <string name="models_view">Choose a model from the list:</string>
    <string name="translation_to_my_language">Translation to my language representing minute granularity type, used to construct date_time entity info</string>
    <string name="extracted_entity">Extracted entity : String representing second granularity type, used to construct date_time entity info</string>
    <plurals name="snackbar_message">
        <item quantity="one">Downloading model %1$s</item>
        <item quantity="other">Downloading models %1$s</item>
    </plurals>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="history_title">History</string>
    <string name="image_title">Image</string>
    <string name="audio_title">Audio</string>
    <string name="barcode_title">Barcode</string>
    <string name="transcribed_text">Transcribed text is here</string>
    <string name="get_text_from_speech">Get text from speech</string>
    <string name="click_to_start_recording">Click to start recording</string>
    <string name="get_text_from_image">Get text from image</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="tralatedText">Translated text</string>
</resources>